@@ -1,8 +1,9 @@
 ﻿[B]Changelog[/B]
-Fixed: Some streams would start in the middle of a stream (Reverted #854) as it seems to be OK now
-Fixed: Paging for VTM would not work (only Q2)
+Added: Recent items to VTM (Fixes #827)
 
 [I]Previous Changes[/I]
+Fixed: Some streams would start in the middle of a stream (Reverted #854) as it seems to be OK now
+Fixed: Paging for VTM would not work (only Q2)
 Fixed: VTM.be do no longer accept an empty range= header (Fixes #854)
 Changed: Combine HTML site (which only lists shows that have episode available) with the JSON API that has more recent videos per show (Fixes #848)
 Fixed: VTM and Q2 updated their sites which broke the channel (Fixes #846)
